--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="My Progressive Web App">
     <link rel="manifest" href="/pwa/manifest.json">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/svg+xml" href="/pwa/favicon.svg">
+    <link rel="apple-touch-icon" href="/pwa/apple-touch-icon.png">
     <title>My PWA</title>
     <style>
         * {
